#118 ~ attempt to fix missing space in author's names;

--- a/app/assets/_dev/css/elements/card.css
+++ b/app/assets/_dev/css/elements/card.css
@@ -143,8 +143,12 @@
         }
     }
 
-    .card-group__author, .card-group__date {
+    .card-group__date {
         @apply inline-flex;
+    }
+
+    .card-group__author {
+        display: inline;
     }
 }
 
